--- a/composer/all.html
+++ b/composer/all.html
@@ -82,8 +82,10 @@ composer global require "fxp/composer-asset-plugin:~1.1.1"</pre>
 </ul>
 
 
-
-
+					<h3>Добавление пакета</h3>
+<pre>composer require twbs/bootstrap
+composer require twbs/bootstrap:3.3.5
+</pre>
 
 
 				</div>
