--- a/bootstrap/html-for-test/html-for-test.html
+++ b/bootstrap/html-for-test/html-for-test.html
@@ -610,7 +610,52 @@
                 </p>
                 <button type="button" class="btn btn-primary btn-lg btn-block">Блок кнопка</button>
                 <button type="button" class="btn btn-default btn-lg btn-block">Блок кнопка</button>
-                <p><img src="..." class="img-responsive" alt="Responsive image"></p>
+                <p><img src="../../images/4-3_320-240_nature.jpg" class="img-responsive" alt="Responsive image"></p>
+                <div class="row">
+                    <div class="col-xs-3">
+                        <p><img src="../../images/4-3_800-600_nature.jpg" class="img-responsive" alt="Responsive image"></p>
+                    </div>
+                </div>
+                <p>
+                    <img src="../../images/4-3_320-240_nature.jpg" alt="..." class="img-rounded">
+                </p>
+                <p>
+                    <img src="../../images/4-3_320-240_nature.jpg" alt="..." class="img-circle">
+                </p>
+                <p>
+                    <img src="../../images/4-3_320-240_nature.jpg" alt="..." class="img-thumbnail">
+                </p>
+                <p class="text-muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+                <p class="text-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p class="text-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+                <p class="text-info">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                <p class="text-warning">Etiam porta sem malesuada magna mollis euismod.</p>
+                <p class="text-danger">Donec ullamcorper nulla non metus auctor fringilla.</p>
+                <p class="bg-primary">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+                <p class="bg-success">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+                <p class="bg-info">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+                <p class="bg-warning">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+                <p class="bg-danger">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+                <p>
+                    <button type="button" class="close" aria-hidden="true">&times;</button>, <span class="caret"></span>
+                </p>
+                <div class="pull-left"><img src="../../images/4-3_320-240_nature.jpg" alt="..." class="img-thumbnail"></div>
+				<div class="pull-right"><img src="../../images/4-3_320-240_nature.jpg" alt="..." class="img-thumbnail"></div>
+				<div class="clearfix">...</div>
+				<p>asd</p>
+				<hr>
+				<div class="row">
+					<div class="col-md-6"><div class="show"> class="show"</div></div>
+					<div class="col-md-6"><div class="hidden"> class="hidden"</div></div>
+				</div>
+				<hr>
+				<p><a class="sr-only" href="#content">Skip to main content</a></p>
+				<hr>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="text-overflow">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</div>
+					</div>
+				</div>
             </div>
         </div>
     </div>
