switch html for test to bootstrap from vendor

--- a/bootstrap/html-for-test/html-for-test.html
+++ b/bootstrap/html-for-test/html-for-test.html
@@ -8,7 +8,8 @@
     <title>html for test bootstrap</title>
     <!-- Bootstrap -->
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="../bootstrap-sass-3.3.7/assets/stylesheets/bootstrap.css" rel="stylesheet">
+    <!-- <link href="../bootstrap-sass-3.3.7/assets/stylesheets/bootstrap.css" rel="stylesheet"> -->
+    <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -662,7 +663,8 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../bootstrap-sass-3.3.7/assets/javascripts/bootstrap.min.js"></script>
+    <!-- <script src="../bootstrap-sass-3.3.7/assets/javascripts/bootstrap.min.js"></script> -->
+    <script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
