--- a/bootstrap/html-for-test/test-js.html
+++ b/bootstrap/html-for-test/test-js.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-3">
-                <div class="navbar-example">
+                <div class="navbar-example affix">
                     <ul class="nav nav-pills nav-stacked">
                         <li><a href="#scrollspy1">Главная</a></li>
                         <li><a href="#scrollspy2">Профиль</a></li>
