--- a/less/all.html
+++ b/less/all.html
@@ -30,7 +30,7 @@
                 </ul>
                 <h2>Convert to css</h2>
                 <h3>lessc</h3>
-                <p>install package <em>core-less</em> for use <code>lessc</code> command in console</p>
+                <p>install package <em>node-less</em> for use <code>lessc</code> command in console</p>
                 <pre class="prettyprint lang-sh">lessc example.less example.css</pre>
                 <p>When many .less files, we can use one .less file whith code:</p>
                 <pre class="prettyprint lang-css">@import &quot;variables.less&quot;;
